# gitrama-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  smithery.yaml
.cursor/: mcp.json
.well-known/mcp/: server-card.json
configs/: claude_desktop_config.json  cursor_mcp.json  vscode_settings.json
src/gitrama_mcp/: __init__.py  __main__.py  server.py
temp/: gitrama-mcp-README.md  gitrama-mcp-setup-guide-new.docx  gitrama-mcp-setup-guide.docx
